@@ -2,6 +2,7 @@ package io.aiven.klaw.config;
 
 import static io.aiven.klaw.model.enums.AuthenticationType.DATABASE;
 
+import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.aiven.klaw.dao.Env;
 import io.aiven.klaw.dao.KwClusters;
@@ -25,6 +26,7 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -55,6 +57,8 @@ public class ManageDatabase implements ApplicationContextAware, InitializingBean
   private static Map<Integer, Map<String, Map<String, String>>> kwPropertiesMapPerTenant;
 
   private static Map<Integer, List<Team>> teamsPerTenant;
+
+  private static Set<String> serviceAccounts;
 
   // key is tenant id, value is list of envs
   private static Map<Integer, List<String>> envsOfTenantsMap;
@@ -346,6 +350,27 @@ public class ManageDatabase implements ApplicationContextAware, InitializingBean
     return teamsAndAllowedEnvsPerTenant.get(tenantId).keySet();
   }
 
+  // return teams
+  public List<Team> getTeamObjForTenant(int tenantId) {
+    return teamsPerTenant.get(tenantId);
+  }
+
+  public Set<String> getAllServiceAccounts(int tenantId) {
+    return serviceAccounts;
+  }
+
+  private void updateAllServiceAccounts(int tenantId) {
+    serviceAccounts = new HashSet<>();
+    getTeamObjForTenant(tenantId)
+        .forEach(
+            a -> {
+              if (a.getServiceAccounts() != null
+                  && a.getServiceAccounts().getServiceAccountsList() != null) {
+                serviceAccounts.addAll(a.getServiceAccounts().getServiceAccountsList());
+              }
+            });
+  }
+
   public Set<String> getTeamNamesForTenant(int tenantId) {
     return teamsPerTenant.get(tenantId).stream().map(Team::getTeamname).collect(Collectors.toSet());
   }
@@ -453,9 +478,7 @@ public class ManageDatabase implements ApplicationContextAware, InitializingBean
     Map<Integer, String> teamsAndNames = new HashMap<>();
 
     List<Team> teamList =
-        allTeams.stream()
-            .filter(team -> Objects.equals(team.getTenantId(), tenantId))
-            .collect(Collectors.toList());
+        allTeams.stream().filter(team -> Objects.equals(team.getTenantId(), tenantId)).toList();
 
     for (Team team : teamList) {
       teamsAndAllowedEnvs.put(team.getTeamId(), envsOfTenantsMap.get(tenantId));
@@ -465,6 +488,7 @@ public class ManageDatabase implements ApplicationContextAware, InitializingBean
 
     teamsAndAllowedEnvsPerTenant.put(tenantId, teamsAndAllowedEnvs);
     teamIdAndNamePerTenant.put(tenantId, teamsAndNames);
+    updateAllServiceAccounts(tenantId);
   }
 
   public Map<Integer, KwTenantConfigModel> getTenantConfig() {
@@ -773,6 +797,7 @@ public class ManageDatabase implements ApplicationContextAware, InitializingBean
           String kwTenantConfig =
               kwPropertiesMapPerTenant.get(tenantId).get(TENANT_CONFIG).get("kwvalue");
           TenantConfig dynamicObj;
+          OBJECT_MAPPER.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 
           dynamicObj = OBJECT_MAPPER.readValue(kwTenantConfig, TenantConfig.class);
           setTenantConfig(dynamicObj);
